<resources>
    <string name="app_name">Compass</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="title_activity_set_direction">set_direction</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="distance_information">Set destination, please.</string>
    <string name="compass_image_description">Compass picture</string>
    <string name="destination_arrow_description">Destination arrow image</string>
    <string name="set_destination_button">SET DESTINATION</string>
    <string name="set_destination_latitude_title">Latitude:</string>
    <string name="set_destination_latitude_hint">e.g. 51.140950</string>
    <string name="set_destination_longitude_title">Longitude:</string>
    <string name="set_destination_longitude_hint">e. g. 17.013501</string>
    <string name="distance_info">"Distance from the destination: %1$sm"</string>
</resources>