<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_set_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/set_destination_latitude_title"
        android:textSize="20sp"
        android:textColor="@color/compass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_set_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/set_destination_latitude_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/compass"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_latitude"
        app:layout_constraintStart_toEndOf="@+id/tv_set_latitude"
        app:layout_constraintTop_toTopOf="@+id/tv_set_latitude"
        android:autofillHints="" />


    <TextView
        android:id="@+id/tv_set_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_destination_longitude_title"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/compass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_latitude" />

    <EditText
        android:id="@+id/et_set_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/set_destination_longitude_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/compass"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_longitude"
        app:layout_constraintStart_toStartOf="@+id/et_set_latitude"
        app:layout_constraintTop_toTopOf="@id/tv_set_longitude"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/compass"
        android:onClick="setDirectionAndClose"
        android:paddingLeft="35dp"
        android:paddingTop="15dp"
        android:paddingRight="35dp"
        android:paddingBottom="15dp"
        android:text="@string/set_destination_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_longitude" />


</androidx.constraintlayout.widget.ConstraintLayout>